syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.zapp.content.server.v1";

package com.glance.spaces.zapp.content.server.v1;

import "com/glance/spaces/common/common_client_params.proto";
import "com/glance/spaces/snp/snp_params.proto";
import "com/glance/spaces/zapp/content/bg_info_xs_element.proto";
import "com/glance/spaces/zapp/content/sports/nba_score.proto";
import "com/glance/spaces/zapp/content/sports/match_xxl.proto";
import "com/glance/spaces/zapp/content/widget_content.proto";

message ServerLiveWidgetMessage {
  common.CommonClientParams common_params = 1;
  snp.SnpParams snp_params = 2;
  repeated ServerLiveWidgetNotification notifications = 3;
}

message ServerLiveWidgetNotification {
  reserved 1, 2;
  reserved   "live_element_id", "snapshot";
  oneof body {
    LiveWidgetDataChange data_change = 3;
  }
}

message LiveWidgetDataChange {
  reserved 1, 2, 5;
  reserved "nba_score_card", "one_weather_card", "match_xxl";
  reserved 3;
  reserved "live_element_id";
  string content_id = 4;
  WidgetContent widget_content = 6;
  int64 published_at = 7;
}

